# Quorum

./: .env.example  .gitignore  .quorum_pids  DEVPOST.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_agentverse.py
agentverse/: README.md
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
docs/: api.md
quorum/: __init__.py  pipeline.py  utils.py
quorum/agents/: __init__.py  agentverse_agent.py  demo_workflow.py  protocols.py  quorum_agent.py  worker_agents.py
quorum/api/: __init__.py  demo.py  dependencies.py  event_bus.py  main.py  observability.py  routes.py  startup.py  ws.py
quorum/consensus/: __init__.py  engine.py  quarantine.py  scoring.py
quorum/contracts/: __init__.py  config.py  errors.py  interfaces.py  models.py  redis_keys.py
quorum/fakes/: __init__.py  event_bus.py  fixtures.py  llm.py  pipeline.py  store.py  validators.py
quorum/state/: __init__.py  provenance.py  redis_store.py  trust.py
quorum/validators/: __init__.py  consistency.py  reasoning.py  source.py
tests/: dashboard_check.sh  smoke.sh  test_pipeline.py
tests/agents/: conftest.py  test_protocols.py  test_quorum_agent.py  test_worker_agents.py
tests/api/: test_routes.py  test_ws.py
tests/consensus/: test_engine.py  test_quarantine.py  test_scoring.py
tests/contracts/: test_fakes.py  test_models.py
tests/state/: test_provenance.py  test_redis_store.py  test_trust.py
tests/validators/: __init__.py  test_consistency.py  test_reasoning.py  test_source.py
(+14 files in other folders)
