[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum"
version = "0.1.0"
description = "Trust and consensus layer for Fetch.ai multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis[asyncio]>=5.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "uagents>=0.14.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "sentry-sdk>=2.5.0",
    "arize>=7.24.0",
    "fakeredis[aioredis]>=2.23.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "anyio[trio]>=4.4.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["quorum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
